--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <h1>Dream-City <br><span id="js-rotating">PERFORMANCE, HARDCORE RP, WIRTSCHAFT, SELFMADE, EVENTS, AKTIVES SERVERTEAM, MODDED AUTOS, CUSTOM SKINS, TOKOVOIP</span></h1>
+                            <h1>Dream-City <br><span id="js-rotating">PERFORMANCE, HARDCORE RP, WIRTSCHAFT, SELFMADE, EVENTS, MODDED AUTOS, CUSTOM SKINS, TOKOVOIP</span></h1>
                             <p class="p-large">~Lebe dein Leben</p>
                             <a class="btn-solid-lg page-scroll" href="https://null-point.de/forum/"><i class="fas fa-user-friends"></i> FORUM</a>
                             <a class="btn-solid-lg page-scroll" href="ts3server://null-point.de?port=9987"><i class="fas fa-headphones"></i> Teamspeak</a>
