--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <!-- Counter -->
                     <div id="counter">
                         <div class="cell">
-                            <p id="users" class="counter-value number-count">users</p>
+                            <div id="users" class="counter-value number-count">users</div>
                             <p class="counter-info">Registrierte Spieler</p>
                         </div>
                         <div class="cell">
