--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="https://discord.gg/RqxcC3N"><span class="item-text">DISCORD</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="ts3server://null-point.de?port=9987"><span class="item-text">TEAMSPEAK</span></a>
+                        <a class="dropdown-item" href="ts3server://dream-city.net?port=9987"><span class="item-text">TEAMSPEAK</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -102,8 +102,8 @@
                         <div class="text-container">
                             <h1>Dream-City <br><span id="js-rotating">PERFORMANCE, HARDCORE RP, WIRTSCHAFT, SELFMADE, EVENTS, MODDED AUTOS, CUSTOM SKINS, TOKOVOIP</span></h1>
                             <p class="p-large">~Lebe dein Leben</p>
-                            <a class="btn-solid-lg page-scroll" href="https://null-point.de/forum/"><i class="fas fa-user-friends"></i> FORUM</a>
-                            <a class="btn-solid-lg page-scroll" href="ts3server://null-point.de?port=9987"><i class="fas fa-headphones"></i> Teamspeak</a>
+                            <a class="btn-solid-lg page-scroll" href="https://forum.dream-city.net/forum/"><i class="fas fa-user-friends"></i> FORUM</a>
+                            <a class="btn-solid-lg page-scroll" href="ts3server://dream-city.net?port=9987"><i class="fas fa-headphones"></i> Teamspeak</a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -382,7 +382,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
-        jQuery.get( "https://null-point.de/api.php?mode=regusers", function( responseText ) {
+        jQuery.get( "https://dream-city.net/api.php?mode=regusers", function( responseText ) {
             $( "#users" ).html( responseText );
             //alert( "Load was performed." );
         });
