--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="Dream-City Website" /> <!-- website name -->
-	<meta property="og:site" content="https://null-point.de" /> <!-- website link -->
+	<meta property="og:site" content="https://dream-city.net" /> <!-- website link -->
 	<meta property="og:title" content="Dream-City RP"/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="Offizielle Website des Dream-City Servernetzwerkes. Lebe dein Leben in FiveM auf Dream City und entdecke echten Spielspaß!" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://null-point.de/images/video-frame.jpg" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="https://null-point.de" /> <!-- where do you want your post to link to -->
+	<meta property="og:image" content="https://dream-city.net/images/video-frame.jpg" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:url" content="https://dream-city.net" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="website" />
 
     <!-- Website Title -->
