Updated SEO; Small changes

--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Offizielle Website des Dream-City Servernetzwerkes. Lebe dein Leben in FiveM auf Dream City und entdecke echten Spielspaß!">
     <meta name="author" content="Pepe">
+    <meta name="keywords" content="FiveM, RolePlay, HardcoreRP, TokoVoip, Hardcore" />
 
-    <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="Dream-City Website" /> <!-- website name -->
-	<meta property="og:site" content="https://dream-city.net" /> <!-- website link -->
-	<meta property="og:title" content="Dream-City RP"/> <!-- title shown in the actual shared post -->
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+
+	<meta property="og:site_name" content="Dream-City Website" />
+	<meta property="og:site" content="https://dream-city.net" />
+	<meta property="og:title" content="Dream-City RP  - Lebe Dein Leben!"/>
 	<meta property="og:description" content="Offizielle Website des Dream-City Servernetzwerkes. Lebe dein Leben in FiveM auf Dream City und entdecke echten Spielspaß!" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://dream-city.net/images/video-frame.jpg" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="https://dream-city.net" /> <!-- where do you want your post to link to -->
+	<meta property="og:image" content="https://dream-city.net/images/video-frame.jpg" />
+	<meta property="og:url" content="https://dream-city.net" />
 	<meta property="og:type" content="website" />
 
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:creator" content="@Pepe44_DCRP">
+    <meta property="twitter:site" content="@Pepe44_DCRP">
+    <meta name="twitter:title" content="Dream-City RP  - Lebe Dein Leben!">
+    <meta name="twitter:image" content="https://dream-city.net/images/video-frame.jpg">
+    <meta name="twitter:description" content="Offizielle Website des Dream-City Servernetzwerkes. Lebe dein Leben in FiveM auf Dream City und entdecke echten Spielspaß!" />
+
     <!-- Website Title -->
-    <title>Dream-City Roleplay</title>
+    <title>Dream-City Roleplay - Lebe Dein Leben!</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
@@ -279,73 +291,6 @@
     </div> <!-- end of basic-1 -->
     <!-- end of video -->
 
-
-
-
-
-    <!-- Details Lightboxes -->
-	<!-- Lightbox -->
-	<div id="details-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
-		<div class="row">
-			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-			<div class="col-lg-6">
-				<img class="img-fluid" src="images/details-lightbox-1.png" alt="alternative">
-			</div>
-			<div class="col-lg-6">
-				<h3>Goals Setting</h3>
-				<hr>
-                <p>Leno can easily help you track your personal development evolution if you take the time to set it up.</p>
-                <h4>User Feedback</h4>
-                <p>This is a great app which can help you save time and make your live easier. And it will help improve your productivity levels.</p>
-                <p>You should definitely give it a try when you need a good app.</p>
-				<table>
-					<tr><td class="icon-cell"><i class="fas fa-desktop"></i></td><td>Responsive layout</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-bullhorn"></i></td><td>Distinctive CTAs</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-image"></i></td><td>Image gallery slider</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-envelope"></i></td><td>Contact forms</td></tr>
-					<tr><td class="icon-cell"><i class="fab fa-font-awesome-flag"></i></td><td>FontAwesome icons</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Well-structured code</td></tr>
-				</table>
-				<a class="btn-solid-reg" href="#your-link">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#details">BACK</a>
-			</div>
-		</div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
-
-    <!-- Lightbox -->
-    <div id="details-lightbox-2" class="lightbox-basic zoom-anim-dialog mfp-hide">
-		<div class="row">
-			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-			<div class="col-lg-6">
-				<img class="img-fluid" src="images/details-lightbox-2.png" alt="alternative">
-			</div>
-			<div class="col-lg-6">
-				<h3>Calendar Input</h3>
-				<hr>
-                <p>The calendar input function enables the user to setup training, meditation and relaxation sessions with ease.</p>
-                <h4>User Feedback</h4>
-                <p>This is a great app which can help you save time and make your live easier. And it will help improve your productivity levels.</p>
-                <p>You should definitely give it a try when you need a good app.</p>
-				<table>
-					<tr><td class="icon-cell"><i class="fas fa-desktop"></i></td><td>Responsive layout</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-bullhorn"></i></td><td>Distinctive CTAs</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-image"></i></td><td>Image gallery slider</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-envelope"></i></td><td>Contact forms</td></tr>
-					<tr><td class="icon-cell"><i class="fab fa-font-awesome-flag"></i></td><td>FontAwesome icons</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Well-structured code</td></tr>
-				</table>
-				<a class="btn-solid-reg" href="#your-link">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#details">BACK</a>
-			</div>
-		</div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
-    <!-- end of details lightboxes -->
-
-
-
-
-
-
     <!-- Statistics -->
     <div class="counter" id="stats">
         <div class="container">
@@ -388,25 +333,11 @@
         });
 
         jQuery.getJSON("https://dream-city.net/api.php?mode=online", function (resp) {
-            var players = Object.keys(resp).length;
+            let players = Object.keys(resp).length;
             console.log(players);
             $("#akSpieler").html(players);
         })
-
-
-
-
-
-
     </script>
-
-
-
-
-
-
-
-
 
     <!-- Copyright -->
     <div class="copyright">
