--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2020 <a>Dream-City</a></p>
+                    <p class="p-small">Copyright © 2020-2021 <a>Dream-City</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
